Correçao do nome do projeto: de aiweb para stockweb

--- a/stockweb/webapp/teste/dwrScriptEngine.html
+++ b/stockweb/webapp/teste/dwrScriptEngine.html
@@ -5,13 +5,13 @@
 
 <script src="../js/indent/formatterJS.js" type="text/javascript" language="javascript"></script>
 
-<script src='/aiweb/dwr/engine.js'></script>
-<script src='/aiweb/dwr/util.js'></script>
-<script src='/aiweb/dwr/interface/ScriptEngineImpl.js'></script>
-<script src='/aiweb/js/schema.js'></script>
+<script src='/stockweb/dwr/engine.js'></script>
+<script src='/stockweb/dwr/util.js'></script>
+<script src='/stockweb/dwr/interface/ScriptEngineImpl.js'></script>
+<script src='/stockweb/js/schema.js'></script>
  
  
-<link rel="stylesheet" type="text/css" href="/aiweb/css/admin.css">
+<link rel="stylesheet" type="text/css" href="/stockweb/css/admin.css">
 <input type="hidden" id="id_script" name="name" class="edit" value=""/>
 
 <table>
@@ -38,11 +38,11 @@
   <table>
   	<tr style="cursor:pointer">
 	  <td width="50px"></td>
-      <td width="50px"><img src="/aiweb/img/new.png" width="40" height="40" type="button" onClick="$script.clear()"/></td>
-      <td width="50px"><img src="/aiweb/img/save.png" width="40" height="40" type="button" onClick="$script.save()"/></td>
-      <td width="50px"><img src="/aiweb/img/list.png" width="40" height="40" value="LIST" type="button" onClick="$script.list()"/></td>
-      <td width="50px"><img src="/aiweb/img/get.png" width="36" height="36"  value="GET"   type="button" onClick="$script.get()"/></td>
-      <td width="50px"><img src="/aiweb/img/delete.png" width="40" height="40" type="button" onClick="$script.rm()"/></td>
+      <td width="50px"><img src="/stockweb/img/new.png" width="40" height="40" type="button" onClick="$script.clear()"/></td>
+      <td width="50px"><img src="/stockweb/img/save.png" width="40" height="40" type="button" onClick="$script.save()"/></td>
+      <td width="50px"><img src="/stockweb/img/list.png" width="40" height="40" value="LIST" type="button" onClick="$script.list()"/></td>
+      <td width="50px"><img src="/stockweb/img/get.png" width="36" height="36"  value="GET"   type="button" onClick="$script.get()"/></td>
+      <td width="50px"><img src="/stockweb/img/delete.png" width="40" height="40" type="button" onClick="$script.rm()"/></td>
   	</tr>
   </table>
 
