--- a/stockweb/webapp/index2.html
+++ b/stockweb/webapp/index2.html
@@ -132,6 +132,7 @@
   		buildDesign.create(eval(jsonStock));
   		buildDesign.create(eval(jsonScript));
   		buildDesign.create(eval(jsonWidgetColor));
+  		buildDesign.create(eval(jsonSetupChart));
   	}
 /*		
 		function handleGetDataCandleType(result) {
@@ -159,17 +160,32 @@
 		function init(){
 				createWindow();
 				document.getElementById("contentwindow0").innerHTML = "&nbsp;&nbsp;<input type='text' id='stock' name='stock' value='F.MI'/>	<input type='button' value='click' onclick='changeChart()'/><iframe id='frameChart' style=' border: 0px; width: 620px; height: 620px;' scrolling='no' src='intraday_data2/index.html?stock=F.MI'></iframe>";
-				document.getElementById("contentwindow01").innerHTML = "<iframe id='frameScriptEngine' style=' border: 0px; width: 500px; height: 500px;' scrolling='no' src='teste/dwrScriptEngine.html'></iframe>";
-				document.getElementById("contentwindow02").innerHTML = "<iframe src='widget/selectcolor.htm' width='370' height='260' scrolling='no' frameborder='0'></iframe>";
+				document.getElementById("contentwindow01").innerHTML = "<iframe name='frameScriptEngine' style=' border: 0px; width: 500px; height: 500px;' scrolling='no' src='teste/dwrScriptEngine.html'></iframe>";
+				document.getElementById("contentwindow02").innerHTML = "<iframe name='frameColor' src='widget/selectcolor.htm' width='370' height='260' scrolling='no' frameborder='0'></iframe>";
+				document.getElementById("contentwindow03").innerHTML = "<iframe name='frameSetupChart' src='teste/setupchart.html' width='320' height='320' scrolling='no' frameborder='0'></iframe>";
 			
 				document.getElementById("window0").style.visibility = "hidden"; 
 				document.getElementById("window01").style.visibility = "hidden"; 
 				document.getElementById("window02").style.visibility = "hidden"; 
+				document.getElementById("window03").style.visibility = "hidden"; 
 				//CandleTypeBean.getListData(handleGetDataCandleType); 	
 
 		}
 		
-
+		
+// -------------------- TEST ----------------------		
+		function show(){
+			alert("OBAAAA !!!!");
+		}
+		var Desktop = function(){
+		
+				this.setVisibleWindow = function(object){
+					document.getElementById(object).style.visibility = "visible"; 
+				}
+		
+		}
+		
+		desktop = new Desktop();
 	  init();
 				
 				
