--- a/trunk/stockweb/webapp/index2.html
+++ b/trunk/stockweb/webapp/index2.html
@@ -133,6 +133,7 @@
   		buildDesign.create(eval(jsonScript));
   		buildDesign.create(eval(jsonWidgetColor));
   		buildDesign.create(eval(jsonSetupChart));
+  		buildDesign.create(eval(jsonChartSetting));
   	}
 /*		
 		function handleGetDataCandleType(result) {
@@ -154,20 +155,22 @@
 		}
 */
 	  function changeChart(){
-		  document.getElementById('frameChart').src='intraday_data2/index.html?stock=' + document.getElementById('stock').value;
+		  document.getElementById('frameChart').src='frameChartStock.html?stock=' + document.getElementById('stock').value;
 	  }
 	  
 		function init(){
 				createWindow();
-				document.getElementById("contentwindow0").innerHTML = "&nbsp;&nbsp;<input type='text' id='stock' name='stock' value='F.MI'/>	<input type='button' value='click' onclick='changeChart()'/><iframe id='frameChart' style=' border: 0px; width: 620px; height: 620px;' scrolling='no' src='intraday_data2/index.html?stock=F.MI'></iframe>";
+				document.getElementById("contentwindow0").innerHTML = "&nbsp;&nbsp;<input type='text' id='stock' name='stock' value='F.MI'/>	<input type='button' value='click' onclick='changeChart()'/><iframe id='frameChart' style=' border: 0px; width: 620px; height: 620px;' scrolling='no' src='frameChartStock.html?stock=F.MI'></iframe>";
 				document.getElementById("contentwindow01").innerHTML = "<iframe name='frameScriptEngine' style=' border: 0px; width: 500px; height: 500px;' scrolling='no' src='teste/dwrScriptEngine.html'></iframe>";
 				document.getElementById("contentwindow02").innerHTML = "<iframe name='frameColor' src='widget/selectcolor.htm' width='370' height='260' scrolling='no' frameborder='0'></iframe>";
 				document.getElementById("contentwindow03").innerHTML = "<iframe name='frameSetupChart' src='teste/setupchart.html' width='320' height='320' scrolling='no' frameborder='0'></iframe>";
+				document.getElementById("contentwindow04").innerHTML = "<iframe id='frameChartSetting' style=' border: 0px; width: 620px; height: 620px;' scrolling='no' src='frameChartSetting.html?stock=F.MI'></iframe>";
 			
 				document.getElementById("window0").style.visibility = "hidden"; 
 				document.getElementById("window01").style.visibility = "hidden"; 
 				document.getElementById("window02").style.visibility = "hidden"; 
 				document.getElementById("window03").style.visibility = "hidden"; 
+				document.getElementById("window04").style.visibility = "hidden"; 
 				//CandleTypeBean.getListData(handleGetDataCandleType); 	
 
 		}
