--- a/stockweb/webapp/teste/setupchart.html
+++ b/stockweb/webapp/teste/setupchart.html
@@ -141,7 +141,7 @@
 		document.getElementById("colorUp").value = rsAttributes[0];    applyColorSelected(document.getElementById("colorUp"));
 		document.getElementById("colorDown").value = rsAttributes[1];  applyColorSelected(document.getElementById("colorDown"));
 		document.getElementById("typeResult").value = rsAttributes[2]; activeCombo();
-		document.getElementById("typeLine").options[rsAttributes[3]].defaultSelected = true;
+		document.getElementById("typeLine").options[rsAttributes[3]].selected = true;
 //		mapAttributes.get(obj.options[obj.selectedIndex].value);
 //  	alert(obj.options[obj.selectedIndex].value);
 
