--- a/trunk/stockweb/webapp/frameChartSetting.html
+++ b/trunk/stockweb/webapp/frameChartSetting.html
@@ -19,7 +19,7 @@
 		// <![CDATA[		
 		var so = new SWFObject("amstock/amstock.swf", "amstock", "100%", "100%", "8", "#FFFFFF");
 		so.addVariable("path", "");
-		so.addVariable("settings_file", encodeURIComponent("http://localhost:8080/stockweb/servlet/SettingsServlet?chart=static&stock="+path.substring(path.indexOf("stock=")+6)));
+		so.addVariable("settings_file", encodeURIComponent("http://localhost:8080/stockweb/servlet/SettingsServlet?chart=dynamic&strategyname=default&stock="+path.substring(path.indexOf("stock=")+6)));
 		so.write("flashcontent");
 		// ]]>		
 		
