--- a/trunk/stockweb/webapp/frameChartStock.html
+++ b/trunk/stockweb/webapp/frameChartStock.html
@@ -1,37 +1,5 @@
-<html>
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Intraday data</title>
-</head>
-<body>
-<!-- saved from url=(0013)about:internet -->
-<!-- amstock script-->
-
-  <script type="text/javascript" src="amstock/swfobject.js"></script>
-	<div id="flashcontent">
-		<strong>You need to upgrade your Flash Player</strong>
-	</div>
-
-	<script type="text/javascript">
-		var path = location.href;
-		//alert(path.substring(path.indexOf("stock=")+6));
-	
-		// <![CDATA[		
-		var so = new SWFObject("amstock/amstock.swf", "amstock", "100%", "100%", "8", "#FFFFFF");
-		so.addVariable("path", "");
-		so.addVariable("settings_file", encodeURIComponent("http://localhost:8080/stockweb/servlet/SettingsServlet?chart=static&stock="+path.substring(path.indexOf("stock=")+6)));
-		so.write("flashcontent");
-		// ]]>		
-		
-		amChartInited("amstock");
-		function amChartInited(chart_id){
-			  flashMovie = document.getElementById(chart_id);
-		}
-		function exportImg(){
-			flashMovie.exportImage("http://localhost:8080/stockweb/RequestAgents");
-		}
-	</script>
-	
-<!-- end of amstock script -->
-</body>
-</html>
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /><title>Intraday data</title></head><body><!-- saved from url=(0013)about:internet --><!-- amstock script-->  <script type="text/javascript" src="amstock/swfobject.js"></script>	<div id="flashcontent">		<strong>You need to upgrade your Flash Player</strong>	</div>			<script type="text/javascript">		var path = location.href;		//alert(path.substring(path.indexOf("stock=")+6));		// <![CDATA[				var so = new SWFObject("amstock/amstock.swf", "amstock", "100%", "100%", "8", "#FFFFFF");		so.addVariable("path", "");		so.addVariable("settings_file", encodeURIComponent("http://spymenow.s41.eatj.com/stockweb/servlet/SettingsServlet?chart=static&stock="+path.substring(path.indexOf("stock=")+6)));		so.write("flashcontent");		// ]]>		 		amChartInited("amstock");		function amChartInited(chart_id){			 flashMovie = document.getElementById(chart_id);			  //		top.frames.utils.setChartStock(flashMovie);		}
+		function exportImg(){			flashMovie.exportImage("http://spymenow.s41.eatj.com/stockweb/RequestAgents");		}		function setZoom(dateI, dateF){			document.getElementById("amstock").setZoom(dateI,dateF);		}
+	</script>
+<!-- end of amstock script -->
+</body></html>
